feat: persist colmeia
